[style] Ensure the Menu is above the main content but behind the Header

--- a/src/components/menu/Menu.module.scss
+++ b/src/components/menu/Menu.module.scss
@@ -9,7 +9,7 @@
 
 .menu {
 	position: fixed;
-	z-index: 1;
+	z-index: 2;
 	display: flex;
 	justify-content: center;
 	align-items: center;
